# TICG_reader

./: pyproject.toml
src/TICG_Reader/: __init__.py
