[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TICG_Reader"
version = "0.1"
description = "TICG Reader"
keywords = ["ovito", "ovito-extension"]
authors = [{name = "Jihun Ahn", email = "0421ajh@naver.com"}]
maintainers = [{name = "Jihun Ahn", email = "0421ajh@naver.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "ovito >= 3.9.1",
]

[project.urls]
repository = "https://github.com/0421ajh/TICG_reader"

[project.entry-points.'OVITO.FileReader']
"[[Human readable file reader name]]" = "TICG_Reader:TICG_Reader"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
]
